# PosTech

./: .gitignore  Makefile  Planejamento.md  README.md  Video STAR.txt  pyproject.toml
data/raw/: test.csv  train.csv  val.csv
docs/: ml_canvas.md  model_card.md  monitoring_plan.md
models/: model_config.json  operating_points.json
notebooks/: 01_eda.ipynb  02_baselines.ipynb  03_mlp_experiments.ipynb
src/: __init__.py
src/api/: main.py  middleware.py  predictor.py  schemas.py
src/data/: loader.py  preprocessing.py
src/evaluation/: metrics.py
src/models/: baselines.py  mlp.py  train_improved.py  train_mlp.py
src/tracking/: mlflow_utils.py
tests/: test_api.py  test_schema.py  test_smoke.py
