[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "churn-predictor"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "scikit-learn>=1.4",
    "mlflow>=2.11",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "pandas>=2.2",
    "numpy>=1.26",
    "pandera>=0.18",
    "xgboost>=2.0",
    "seaborn>=0.13",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.4",
    "ipykernel",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
